Update Index.html anchors
fixes anchor title size/ links

--- a/index.html
+++ b/index.html
@@ -3,16 +3,10 @@
 <link rel= "stylesheet" href="">
 <a href="#linktotop"></a>
 
-<a href = "Wealth_Disparity">Wealth</a>
-<a href = "Last_50_years"> Past 50 years</a>
-<a href = "more_recent_years"> Recent Years</a>
 
-<a href = "Education"> Education</a>
-<a href = "Works_Cited">Works Cited</a>
-
-<a href= "https://tserp02.github.io/history2020/index.html#Wealth_Disparity">Wealth_Disparity</a>
-<a href= "https://tserp02.github.io/history2020/index.html#Last_50_years">Last_50_years</a>
-<a href= "https://tserp02.github.io/history2020/index.html#more_recent_years">recent_years</a>
+<a href= "https://tserp02.github.io/history2020/index.html#Wealth_Disparity">Wealth</a>
+<a href= "https://tserp02.github.io/history2020/index.html#Last_50_years">Past_50_years</a>
+<a href= "https://tserp02.github.io/history2020/index.html#more_recent_years">Recent Years</a>
 <a href= "https://tserp02.github.io/history2020/index.html#Education">Education</a>
 <a href= "https://tserp02.github.io/history2020/index.html#Works_Cited">Works_Cited</a>
 
@@ -30,7 +24,7 @@
 <title>Wealth and Education Disparity</title>
 </head>
 <body>
-    <h1><a id = "Wealth_Disparity">Wealth and Education Disparity</a></h1>
+    <h1><a id = "Wealth_Disparity"></a>Wealth and Education Disparity</h1>
     <h2>Wealth Disparity:</h2>
     
     <p> 
@@ -48,7 +42,7 @@
     </div>
 
     <div class = "section">
-    <h3><a id = "Last_50_years">1968 - 2016:</a></h3>
+    <h3><a id = "Last_50_years"></a>1968 - 2016:</h3>
     <p> 
     <img src="https://www.washingtonpost.com/wp-apps/imrs.php?src=https://arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/QBCAUK4G55D4LCU3Z6WHVFPVSQ.png&w=916" height = "50%" width = "50%" alt="washingtonpost">
     <br>
@@ -109,7 +103,7 @@
 
 
     <div class = "section">
-    <h3><a id = "more_recent_years">2013 - 2016</a></h3>
+    <h3><a id = "more_recent_years"></a>2013 - 2016</h3>
     <p>
         <img src = "https://www.federalreserve.gov/econres/notes/feds-notes/scf-note-figure1-20170927.png", alt = "federalreserve">
         <br>
