--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         They paid higher rents and recieve lower wages, which caused them to struggle to pay their bills.
         With just enough money to survive, often times black parents couldn't afford to send their kids to college and had little wealth left to pass 
         down to the next generation.  This lack of wealth occured generation after generation and continued to snowball.  The rich get richer and the poor get poorer.
-        In the book “<i>The Warmth of Other Suns</i>” Wilkerson shows that in Mississippi “White teachers and principals were making $630 a year, while the colored ones were paid a third of that - $215 a year” (Wilkerson 85).
+        In the book “<i>The Warmth of Other Suns</i>” Wilkerson shows that in Mississippi “White teachers and principals were making $630 a year, while the colored ones were paid a third of that - $215 a year” (Wilkerson 2010, 85).
         This problem existed over 70 years ago, however it still remains an issue today. <br>
         <a href= "https://www.goodreads.com/book/show/8171378-the-warmth-of-other-suns">
         <img src = "https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1433354252l/8171378._SY475_.jpg" height = "20%" width = "20%" alt = "WarmthOfOtherSuns">
@@ -67,7 +67,7 @@
      white household, according to data from the historical Survey of Consumer Finances that has been adjusted for inflation. 
      In 2016, the typical middle-class black household had <span class = num1>$13,024</span> in wealth versus <span class = num1>$149,703</span> for the median white household, 
      an even larger gap in percentage terms." 
-    (Long and Dam).
+    (Long and Dam 2020).
     </p>
     <p>
     <br>
@@ -95,7 +95,7 @@
     Furthermore every economic crisis African Americans are hit the hardest.  Beating  back down any gain they had started to have.  
     For example during the housing crisis African Americans took a large hit to their wealth, and have been recovering over the past decade.  Now the Corona virus
     hits and black households are hit harder than anyone else, due to their economically weak state.  
-    Studies show that "more than 2 out of 5 black small businesses and self-employed workers have been forced to shutter during the pandemic— well over twice the rate of white businesses" (Long and Dam).
+    Studies show that "more than 2 out of 5 black small businesses and self-employed workers have been forced to shutter during the pandemic— well over twice the rate of white businesses" (Long and Dam 2020).
     Just the fact that 40% of black small businesses and self employed people have taken this hit is crazy and goes to show how bad the pandemic
     is for African Americans especially.  Many of these businesses will not be able to recover, and will just reset all these people back to nothing all over again.
     
@@ -128,7 +128,7 @@
         Even with the large percentage gains for black and Hispanic families, the white-black gap in median net worth 
         increased from $132,800 in 2013 to $153,500 in 2016, and the white-Hispanic gap increased from $132,200
         in 2013 to $150,300 in 2016." 
-        (Dettling, Hsu, Jacobs, Moore, Thompson, and Llanes, "Recent Trends in Wealth-Holding by Race and Ethnicity: Evidence from the Survey of Consumer Finances")
+        (Dettling, Hsu, Jacobs, Moore, Thompson, and Llanes 2017)
     </p>
 
     <p>
@@ -161,7 +161,7 @@
         after graduating.  The median net worth of people with bachelors degree in 2016 was a 5.82 : 1 ratio of white to black average wealth (397.1 : 68.2). 
         The discrepency between debt and assets between the races attribute to
         "Nearly one in five black households has zero or negative net worth.
-        The share of white households without any wealth is considerably smaller, at 9 percent." (Dettling, Hsu, Jacobs, Moore, Thompson, and Llanes)
+        The share of white households without any wealth is considerably smaller, at 9 percent." (Dettling, Hsu, Jacobs, Moore, Thompson, and Llanes 2017)
         <br>
         <a href= "https://tserp02.github.io/history2020/index.html#Calculations">Calculations 2</a><br>
         <br>
@@ -226,13 +226,13 @@
         <br>
     </p>
     <p class = "hang">
-        Long Heather, and Dam Andrew. "The black-white economic divide is as wide as it was in 1968." washingtonpost, 4 June 2020, 
+        Long Heather, and Dam Andrew (2020). "The black-white economic divide is as wide as it was in 1968." Washington Post, June 4 2020, 
         <a href = "https://www.washingtonpost.com/business/2020/06/04/economic-divide-black-households/?utm_campaign=wp_post_most&utm_medium=email&utm_source=newsletter&wpisrc=nl_most" target = "_blank">
         <font size = 4px><u>
         https://www.washingtonpost.com/business/2020/06/04/economic-divide-black-households/?utm_campaign=wp_post_most&utm_medium=email&utm_source=newsletter&wpisrc=nl_most</u></font></a>
     </p>
     <p class = "hang">
-        Wilkerson, Isabel. "The Warmth of Other Suns The Epic Story of America's Great Migration". Penguin Random House LLC.  2010.
+        Wilkerson, Isabel. "The Warmth of Other Suns The Epic Story of America's Great Migration". 2010. New York: Penguin Random House LLC.
     </p>
     </div>
 
