--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     </p>
     <p style="line-height: 1.4; font-size: 5px">
         
-        <a href= "https://tserp02.github.io/history2020/index.html#Wealth_Disparity">Wealth</a> <br>
-        <a href= "https://tserp02.github.io/history2020/index.html#Last_50_years">Past 50 years</a> <br>
-        <a href= "https://tserp02.github.io/history2020/index.html#more_recent_years">Recent Years</a><br>
-        <a href= "https://tserp02.github.io/history2020/index.html#Calculations">Calculations</a><br>
-        <a href= "https://tserp02.github.io/history2020/index.html#Bibliography">Bibliography</a> <br>
-        <a href ="https://tserp02.github.io/history2020/index.html#FurtherResearch">Further Research</a> <br>
+        <a href= "https://pdsatter.github.io/history2020/index.html#Wealth_Disparity">Wealth</a> <br>
+        <a href= "https://pdsatter.github.io/history2020/index.html#Last_50_years">Past 50 years</a> <br>
+        <a href= "https://pdsatter.github.io/history2020/index.html#more_recent_years">Recent Years</a><br>
+        <a href= "https://pdsatter.github.io/history2020/index.html#Calculations">Calculations</a><br>
+        <a href= "https://pdsatter.github.io/history2020/index.html#Bibliography">Bibliography</a> <br>
+        <a href ="https://pdsatter.github.io/history2020/index.html#FurtherResearch">Further Research</a> <br>
     </p>
 
 
